Fix navbar spacing in minimal-small theme

--- a/brutaldon/static/css/minimal-small.css
+++ b/brutaldon/static/css/minimal-small.css
@@ -265,3 +265,6 @@ hr.is-hidden
 	  display: flex;
 }
 
+.navbar-item span {
+    padding-right: 1ex;
+}
